--- a/pages/course/component_t/detail/detail.wxml
+++ b/pages/course/component_t/detail/detail.wxml
@@ -1,38 +1,52 @@
 <view class="blockd">
   <view class="row header" catchtap='toTeacherInfo'>
-    <view class="img"><image src="/img/my.png"></image></view>
+    <view class="img">
+      <image src="/img/my.png"></image>
+    </view>
     <view class="desc">
       <view class="title">计算机网络</view>
       <view class="teacher">许伟杰老师</view>
     </view>
+    <view class="trend">></view>
+  </view>
+  <view class="public">
+    是否公开课程：
+    <switch></switch>
   </view>
   <view class="courseId" catchtap='copyId'>
     <view class="courseId-con">班课号（点击复制）：{{courseId}}</view>
   </view>
 </view>
-<view class="blockd" >
-  <view class="row" wx:for="{{classify}}">
-    <view class="row-con">
-      <image src="{{item.src}}" class="icon"></image>
-      <view>
-        <view class="tag">{{item.title}}</view> 
-        <view class="text" wx:if="{{item.status == 1}}">{{item.desc}}</view>
-        <view class="text" wx:if="{{item.status == 0}}">暂未设置</view>
+
+<form>
+  <view class="blockd">
+    <view class="row" wx:for="{{classify}}">
+      <view class="row-con">
+        <image src="{{item.src}}" class="icon"></image>
+        <view>
+          <view class="tag">{{item.title}}</view>
+          <input class="text" placeholder="{{item.status == 1?item.desc:'点击设置'}}">{{item.desc}}</input>
+          
+        </view>
       </view>
     </view>
   </view>
-</view> 
-<view class="blockd">
-  <view class="row" wx:for="{{intro}}">
-    <view class="row-con">
-      <image src="{{item.src}}" class="icon"></image>
-      <view>
-        <view class="head">{{item.title}}</view>
-        <view class="con" wx:if="{{item.status == 0}}">暂无内容</view>
-        <view class="con" wx:if="{{item.status == 1}}">{{item.con}}</view>
+  <view class="blockd">
+    <view class="row" wx:for="{{intro}}">
+      <view class="row-con">
+        <image src="{{item.src}}" class="icon"></image>
+        <view>
+          <view class="head">{{item.title}}</view>
+           <input class="con"  placeholder="{{item.status == 1?item.con:'点击设置'}}">{{item.desc}}</input>
+        </view>
+
       </view>
-      
     </view>
   </view>
+  <button form-type='submit' class="submit">保存修改</button>
+</form>
+<view class="btn_end">
+<button class="end">结束班课</button>
+<text>班课结束后将无法发布资源、活动等，但仍可以查看已发布的资源和活动</text>
 </view>
-<button form-type='submit'>退出班课</button>
+
