--- a/pages/course/component_t/homework/homework.wxml
+++ b/pages/course/component_t/homework/homework.wxml
@@ -1,2 +1,58 @@
-<!--pages/course/component_t/homework/homework.wxml-->
-<text>pages/course/component_t/homework/homework.wxml</text>
+<view class="blockq">
+  <view class="headq" catchtap='changeFlag'>
+    <text class="{{currentBlock==0?'pub':'unpub'}}">已发布({{published.length}})</text>
+    <text class="{{currentBlock==0?'unpub':'pub'}}">未发布({{unpublish.length}})</text>
+  </view>
+
+  <view class="published" hidden="{{currentBlock==0?false:true}}">
+    <view class="row" wx:for="{{published}}">
+      <view class="row-con">
+        <view class="img">
+          <image src="/img/file/link.png"></image>
+        </view>
+        <view class="desc">
+          <view class="title">{{item.name}}</view>
+          <view class="statement">{{item.date}}</view>
+        </view>
+        <view class="trend">></view>
+      </view>
+    </view>
+  </view>
+
+  <view class="unpublish" hidden="{{currentBlock==1?false:true}}">
+    <view class="row" wx:for="{{unpublish}}">
+      <view class="row-con">
+        <view class="img">
+          <image src="/img/file/link.png"></image>
+        </view>
+        <view class="desc">
+          <view class="title">{{item.name}}</view>
+          <view class="title transpalte" style="color:white"><text decode="{{true}}">&ensp;</text></view>
+        </view>
+        <button class="pub_btn" >发布</button>
+      </view>
+    </view>
+  </view>
+</view>
+<view class="null" wx:if="{{published.length == 0}}" hidden="{{currentBlock==0?false:true}}">空空如也</view>
+<view class="null" wx:if="{{unpublish.length == 0}}" hidden="{{currentBlock==1?false:true}}">空空如也</view>
+
+<view class="add iconfont icon-zengjia" id="add" bindtap="showDialogBtn"></view>
+<!--弹窗-->
+<view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
+<view class="modal-dialog" wx:if="{{showModal}}">
+  <view class="modal-title">新建作业</view>
+  <view class="modal-content">
+    <view class="modal-input">
+      <input placeholder-class="input-holder" type="text" bindinput="inputChange" class="input" value="{{date}}"></input>
+    </view>
+  </view>
+  <view class="modal-footer">
+    <view class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</view>
+    <view class="btn-confirm" bindtap="onConfirm" data-status="confirm">确定</view>
+  </view>
+</view>
+
+
+
+
