--- a/pages/course/component_t/homework/homework.wxml
+++ b/pages/course/component_t/homework/homework.wxml
@@ -1,18 +1,18 @@
 <view class="blockq">
   <view class="headq" catchtap='changeFlag'>
-    <text class="{{currentBlock==0?'pub':'unpub'}}">已发布({{published.length}})</text>
-    <text class="{{currentBlock==0?'unpub':'pub'}}">未发布({{unpublish.length}})</text>
+    <text class="{{currentBlock==0?'pub':'unpub'}}">已发布({{publishedList.length}})</text>
+    <text class="{{currentBlock==0?'unpub':'pub'}}">未发布({{unpublishList.length}})</text>
   </view>
 
-  <view class="published" hidden="{{currentBlock==0?false:true}}">
-    <view class="row" wx:for="{{published}}">
+  <view class="publishedList" hidden="{{currentBlock==0?false:true}}">
+    <view class="row" wx:for="{{publishedList}}">
       <view class="row-con">
         <view class="img">
           <image src="/img/file/link.png"></image>
         </view>
         <view class="desc">
-          <view class="title">{{item.name}}</view>
-          <view class="statement">{{item.date}}</view>
+          <view class="title">{{item.title}}</view>
+          <view class="statement">{{item.createTime}}</view>
         </view>
         <view class="trend">></view>
       </view>
@@ -20,20 +20,25 @@
   </view>
 
   <view class="unpublish" hidden="{{currentBlock==1?false:true}}">
-    <view class="row" wx:for="{{unpublish}}">
-      <view class="row-con">
+    <view class="row" wx:for="{{unpublishList}}" >
+      <view class="row-con" bindtouchstart="touchS"  bindtouchmove="touchM"  bindtouchend="touchE" data-index="{{index}}" style="{{item.txtStyle}}" catchtap='showHW'>
         <view class="img">
           <image src="/img/file/link.png"></image>
         </view>
         <view class="desc">
-          <view class="title">{{item.name}}</view>
-          <view class="title transpalte" style="color:white"><text decode="{{true}}">&ensp;</text></view>
+          <view class="title">{{item.title}}</view>
+          <view class=" transpalte" style="color:white">
+            <text decode="{{true}}">&ensp;</text>
+          </view>
         </view>
-        <button class="pub_btn" >发布</button>
+        <button class="pub_btn" catchtap='push'>发布</button>
       </view>
+      <view class="del" data-index="{{index}}" bindtap = "delItem">删除</view>
     </view>
+    
   </view>
 </view>
+
 <view class="null" wx:if="{{published.length == 0}}" hidden="{{currentBlock==0?false:true}}">空空如也</view>
 <view class="null" wx:if="{{unpublish.length == 0}}" hidden="{{currentBlock==1?false:true}}">空空如也</view>
 
@@ -41,20 +46,16 @@
 <!--弹窗-->
 <form bindsubmit="GetName">
   <view class="modal-mask" bindtap="hideModal" catchtouchmove="preventTouchMove" wx:if="{{showModal}}"></view>
-<view class="modal-dialog" wx:if="{{showModal}}">
-  <view class="modal-title">新建作业</view>
-  <view class="modal-content">
-    <view class="modal-input">
-      <input placeholder-class="input-holder" type="text" bindinput="inputChange" class="input" value="{{date}}" name="hw_name"></input>
+  <view class="modal-dialog" wx:if="{{showModal}}">
+    <view class="modal-title">新建作业</view>
+    <view class="modal-content">
+      <view class="modal-input">
+        <input placeholder-class="input-holder" type="text" bindinput="inputChange" class="input" value="{{date}}" name="hw_name"></input>
+      </view>
+    </view>
+    <view class="modal-footer">
+      <button class="btn-cancel" bindtap="onCancel" data-status="cancel">取消</button>
+      <button class="btn-confirm" bindtap="onConfirm" data-status="confirm" form-type='submit'>确定</button>
     </view>
   </view>
-  <view class="modal-footer">
-    <button class="btn-cancel" bindtap="onCancel" data-status="cancel" >取消</button>
-    <button class="btn-confirm" bindtap="onConfirm" data-status="confirm" form-type='submit'>确定</button>
-  </view>
-</view>
 </form>
-
-
-
-
