--- a/pages/course/component/question/question.wxml
+++ b/pages/course/component/question/question.wxml
@@ -8,8 +8,8 @@
       </view>
       <view class="desc">
         <view class="title">{{item.title}}</view>
-        <view class="statement" wx:if="{{item.state == 0}}">未完成</view>
-        <view class="statement" wx:if="{{item.state == 1}}">已提交</view>
+        <view class="statement f" wx:if="{{item.state == 0}}">未完成</view>
+        <view class="statement t" wx:if="{{item.state == 1}}">已提交</view>
         <view class="statement score" wx:if="{{item.state == 1}}">得分：{{item.score}}</view>
       </view>
       
