--- a/pages/course/course.wxml
+++ b/pages/course/course.wxml
@@ -10,7 +10,7 @@
     <view class="title">我参加的课程</view>
     <view class="row" catchtap='toCourse'>
       <view class="photo"><image src="../../img/my.png"></image></view>
-      <view class="desc"><text>计算机网络</text><text class="teacher">谢老师</text></view>
+      <view class="desc"><text>计算机网络11111111111111111111111111111111111</text><text class="teacher">谢老师</text></view>
       <view class="trend">></view>
     </view>
     <view class="row">
